@startuml grade_record_contract

!pragma layout smetana
skinparam packageStyle rectangle
skinparam defaultFontName Inter

package "adapter.in.web.rest" {
  interface "GradeRecordRestController" <<RestController>> {
    + createGradeRecord(req: GradeRecordRequest): ResponseEntity<GradeRecordResponse>
    + updateGradeRecord(id: UUID, req: GradeRecordRequest): ResponseEntity<GradeRecordResponse>
    + deleteGradeRecord(id: UUID): ResponseEntity<Void>
    + getGradeRecordById(id: UUID): ResponseEntity<GradeRecordResponse>
  }
}

package "adapter.in.web.graphql" {
  interface "GradeRecordGraphQLResolver" <<GraphQLResolver>> {
    + listGradeRecords(filter: GradeRecordFilterInput): List<GradeRecord>
  }
}

package "adapter.out.persistence" {
  interface "GradeRecordRepository" <<Repository>> {
    + save(entity: GradeRecord): GradeRecord
    + findById(id: UUID): Optional<GradeRecord>
    + findByExample(example: Example<GradeRecord>): List<GradeRecord>
    + deleteById(id: UUID): void
  }
  note right of GradeRecordRepository
    Optimistic Locking enforced.
    Repository MUST check version field before save.
  end note
}

' === Dependency Arrows ===
"GradeRecordRestController"  ..> "GradeRecordRepository" : uses
"GradeRecordGraphQLResolver" ..> "GradeRecordRepository" : uses

@enduml
